--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --watchAll --verbose"
+    "test": "jest --watch --verbose"
   },
   "keywords": [],
   "author": "",
