--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest --watch --verbose"
+    "test": "cross-env ENVIRONMENT=testing jest --watch --verbose"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "jest": "^24.3.1",
     "nodemon": "^1.18.10",
     "supertest": "^3.4.2"
